@startuml
skinparam classAttributeIconSize 0

class Company
{
  -String designation
}

class Client {  
  -String name
  -String address
  -String phoneNumber
  -String eMail
  -String sex
  -String cnn
  -String nhsNumber
  -String birthDate
  -String tin
}

class UpdateClientDataController {
  +updateInfo()
}

class UpdateClientDataScene {
}

UpdateClientDataScene ..> UpdateClientDataController 
UpdateClientDataController ..> Company
Company "1" --> "1..*" Client: has
@enduml